<resources>
    <string name="app_name">Status Saver Pro</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="isRTL">false</string>

    <string name="play_more_app">https://play.google.com/store/apps</string>

    <string name="image">Images</string>
    <string name="video">Videos</string>
    <string name="rate_app">Rate App</string>
    <string name="more_app">More App</string>
    <string name="share_app">Share App</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="Button">Switch</string>

    <string name="exit">Exit</string>
    <string name="Please_click_BACK_again_to_exit">Please click BACK again to exit</string>
    <string name="Let_me_recommend_you_this_application">Let me recommend you this application</string>

    <string name="download">Downloads</string>
    <string name="downloads">Downloaded</string>
    <string name="imagedownload">Download</string>
    <string name="set_as_wallpaper">Set Wallpaper</string>
    <string name="profile">profile</string>
    <string name="delete">Delete</string>
    <string name="no_data">No Data Found</string>
    <string name="share">Share</string>
    <string name="loading">Loading....</string>
    <string name="start">Start</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="pleas_allow_permission">Pleas allow permission</string>
    <string name="allow_permission">Allow permission</string>
    <string name="intro_one">Status Saver Pro</string>
    <string name="intro_two">This application will allow you to share and download status.\n\n✔ Saved status will be displayed in this application for future use.</string>
    <string name="choose_one">Choose one</string>
    <string name="name"> WhatsApp Status\n Saver Pro</string>

    <string name="ourpolicy">
       ⦿ App Permission Details\n\n

       ➼ Internet Permission:\n
       ➼ To display Ads inside app\n
       ➼ Read/Write External Storage Permission:\n
       ➼ To load images / To Save files created in app\n\n
        We do not collect any personal information.
        We use third party services that may collect information used to identify you.
        Link to privacy policy of third party service providers used by the app.\n\n
        ① Google Play Services\n\n
        ② AdMob\n\n
        ③ Firebase\n\n

       ⦿ Disclaimer:\n\n
 ① This application is not affiliated with WHATSAPP.\n
 ② Any unauthorized actions (saving or sharing) and/or violations of IPR is the sole responsibility of the user.\n\n

       ⦿ IMPORTANT\n\n
This application is not affiliated, sponsored or endorsed by WhatsApp Inc.\n
We are not responsible for any type of reuse of the media downloaded by the user.\n\n
        We may update our Privacy Policy from time to time.
        Thus, you are advised to review this page periodically for any changes.
        We will notify you of any changes by posting the new Privacy Policy on this page.
        These changes are effective immediately after they are posted on this page.\n\n\n

        ⦿ Contact Us\n\n
        If you have any questions or suggestions about our Privacy Policy,
        do not hesitate to contact us at\n theedeveloperss@gmail.com.</string>


</resources>
