<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context="com.app.tanish.Activity.ShowItem">


    <com.app.tanish.Util.StatusBarView
        android:id="@+id/statusBarView_imageShow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_imageShow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/statusBarView_imageShow"
        android:textStyle="bold"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statusBarView_imageShow"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />


    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewpager_imageShow"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:layout_width="400dp"
        android:layout_height="100dp">

        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-9601665302832731/9039625348">
        </com.google.android.gms.ads.AdView>

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/control_image_show"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout_download_imageShow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <ImageView
                android:id="@+id/imageView_download_imageShow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@drawable/dwnlod" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/imagedownload"
                android:textColor="@color/white"
                android:textSize="12sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView_line_one_imageShow"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:src="@drawable/line" />

        <LinearLayout
            android:id="@+id/linearLayout_set_as_wallpaper_imageShow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <ImageView
                android:id="@+id/imageView_set_as_wallpaper_imageShow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@drawable/wallpaper" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/set_as_wallpaper"
                android:textColor="@color/white"
                android:textSize="12sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView_line_two_imageShow"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:src="@drawable/line" />

        <LinearLayout
            android:id="@+id/linearLayout_profile_imageShow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <ImageView
                android:id="@+id/imageView_other_imageShow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@drawable/user" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/profile"
                android:textColor="@color/white"
                android:textSize="12sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView_line_three_imageShow"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:src="@drawable/line" />

        <LinearLayout
            android:id="@+id/linearLayout_delete_imageShow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <ImageView
                android:id="@+id/imageView_delete_imageShow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@drawable/delete" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/delete"
                android:textColor="@color/white"
                android:textSize="12sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView_line_four_imageShow"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:src="@drawable/line" />

        <LinearLayout
            android:id="@+id/linearLayout_share_imageShow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <ImageView
                android:id="@+id/imageView_share_imageShow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@drawable/share" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/share"
                android:textColor="@color/white"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
